* implemented oninput method for form elements for unsupported   browsers * fix IE9 to ensure backspace and delete keys fire an   oninput event.
Change-Id: Ie7ad580fc8c556bd5cac58df096b39a2549e30e3

--- a/tests/html5Widgets/CHANGELOG
+++ b/tests/html5Widgets/CHANGELOG
@@ -1,3 +1,5 @@
 Changelog for this package:
 version 1.0    - initial release (July 27, 2010) 
 version 1.0b   - updated to deal with WebKit's half-implemented WebForms 2 Implementation (Sept 10, 2010)
+version 1.1    - implemented oninput method for form elements for unsupported browsers
+               - fix IE9 to ensure backspace and delete keys fire an oninput event. (May 12, 2011)
